test/regress/regress-27.txt
;;; TOOL: run-gen-wasm-interp
;;; ERROR: 1
magic
version
section(MEMORY) {
  count[1]
  has_max[0]
  initial[0]
}
section(DATA) {
  count[1]
  flags[0]
  addr[end]
  data[str("test")]
}
(;; STDERR ;;;
out/test/regress/regress-27/regress-27.wasm:0000011: error: type mismatch in initializer expression, expected [i32] but got []
0000012: error: EndDataSegmentInitExpr callback failed
;;; STDERR ;;)
